2011-04-20  Leo Yang  <leo.yang@torchmobile.com.cn>

        Reviewed by Eric Seidel.

        Leaks beneath RenderSVGShadowTreeRootContainer::updateFromElement seen on SnowLeopard Intel Leaks
        https://bugs.webkit.org/show_bug.cgi?id=56672

        ~RenderSVGShadowTreeRootContainer() cleared shadow host only if
        the shadow root is attached. This is wrong because it will
        leak shadow root when the root is not attached. For example, it
        leaks shadow root of <use> element which is pending on resource.

        This patch is clearing shadow host if m_shadowRoot is valid to
        prevent leaking.

        Fixing leaking, no new tests.

        * rendering/svg/RenderSVGShadowTreeRootContainer.cpp:
        (WebCore::RenderSVGShadowTreeRootContainer::~RenderSVGShadowTreeRootContainer):

2011-04-19  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Antti Koivisto.

        Reproducible crash two-finger zooming at multiple sites in WebCore::RenderLayer::isTransparent
        https://bugs.webkit.org/show_bug.cgi?id=58868

        I could not figure out how to make a test.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::paintLayer): Check for existence of a
        parent before calling a method on it.

2011-04-20  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Daniel Bates.

        [EFL] Add current time to media control panel.
        https://bugs.webkit.org/show_bug.cgi?id=58866

        Implement paintMediaCurrentTime() to show playing time of media content.

        * platform/efl/RenderThemeEfl.cpp:
        (WebCore::RenderThemeEfl::RenderThemeEfl):
        (WebCore::RenderThemeEfl::formatMediaControlsCurrentTime):
        (WebCore::RenderThemeEfl::paintMediaCurrentTime):
        * platform/efl/RenderThemeEfl.h:

2011-04-19  Jungshik Shin  <jshin@chromium.org>

        Reviewed by Adam Barth

        Update the list of Unicode blocks to treat as complex scripts