@@ -1,3 +1,13 @@
+2011-04-20  Pavel Feldman  <pfeldman@google.com>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: minor protocol cleanups (refined types).
+        https://bugs.webkit.org/show_bug.cgi?id=58970
+
+        * inspector/InjectedScriptSource.js:
+        * inspector/Inspector.json:
+
 2011-04-20  Leo Yang  <leo.yang@torchmobile.com.cn>
 
         Reviewed by Eric Seidel.
